# PyEduWebHT10

./: README.md  pyproject.toml
hometask10/: env_sample  manage.py
hometask10/hometask10/: asgi.py  settings.py  urls.py  wsgi.py
hometask10/quoteapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hometask10/quoteapp/migrations/: 0001_initial.py  0002_alter_author_slug.py  0003_alter_author_description.py  0004_tag_slug_alter_author_slug.py  0005_alter_quote_text.py
hometask10/quoteapp/static/quoteapp/: main.css
hometask10/quoteapp/templates/quoteapp/: add-author.html  add-quote.html  author.html  base.html  index.html  tag.html
hometask10/quoteapp/templatetags/: order_tags.py
hometask10/scrape/: db_import.py  forms.py  models.py  parser.py  urls.py  views.py
hometask10/scrape/templates/scrape/: scrape_quotes.html
hometask10/users/: forms.py  urls.py  views.py
hometask10/users/templates/users/: login.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  signup.html
