[tool.poetry]
name = "hometask-10"
version = "0.1.0"
description = ""
authors = ["Oleksii Petrashov <oleksii.petrashov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hometask10"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
